--- a/Assignment/CSS_Assignment.html
+++ b/Assignment/CSS_Assignment.html
@@ -60,9 +60,8 @@
                
 
     <h2>Q :- 5)</h2>    What do you understand by CSS opacity?            
-    <h3>Ans: </h3>      In addition to RGB, you can use an RGB color value with an alpha channel 
-                        (RGBA)-which specifies the opacity for a color. An RGBA color value is 
-                        specified with:rgba (red, green, blue, alpha). The alpha parameter is a number between 0.0 (fully transparent) and 1.0 (fully opaque).
+    <h3>Ans: </h3>   
+                        The opacity property sets the opacity level for an element. The opacity-level describes the transparency-level, where 1 is not transparent at all, 0.5 is 50% see-through, and 0 is completely transparent.
 
 
     <h2>Q :- 6)</h2>    How can the background color of an element be changed?            
