--- a/Wave/wave.html
+++ b/Wave/wave.html
@@ -8,15 +8,17 @@
 </head>
 <body>
     <div class="wave_form">
+        <div class="wave1">
     <div class="wave">
         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#a2d9ff" fill-opacity="1" d="M0,224L60,229.3C120,235,240,245,360,213.3C480,181,600,107,720,101.3C840,96,960,160,1080,165.3C1200,171,1320,117,1380,90.7L1440,64L1440,320L1380,320C1320,320,1200,320,1080,320C960,320,840,320,720,320C600,320,480,320,360,320C240,320,120,320,60,320L0,320Z"></path></svg>
     </div>
     <div class="text">
         <h3>OUR TEAM</h3>
-        <p>Make the craziest team. Share your thoughts with there </p>
+        <h5>Make the craziest team. Share your thoughts with there </h5>
         <br>
         <hr>
     </div>
+        </div>
     <div class="boxes">
         <div class="box1">
             <img class="img1" src="https://th.bing.com/th/id/OIP.0kfNsx2tbnH8gpKgQbO2RwHaHa?w=760&h=760&rs=1&pid=ImgDetMain" alt="">
