--- a/Figma-file/figma.html
+++ b/Figma-file/figma.html
@@ -75,7 +75,7 @@
         </div>
         </div>
     <div>
-    <img class="graf1" src="https://s3-alpha-sig.figma.com/img/39e1/923f/13d450236ee55a682dd1e900494e741e?Expires=1709510400&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4&Signature=jPFK3YrxIv3fDQG1UNV1Jbg0iBBHQaa6kglEP87cIEBFIE202FDlmiHwaK5Xjh8FD2P44iKqzTMBI1knblgOBYoYjoeV5pltNLiBI~-ZSd98V32LgAtPtHJI~4k~4qiLpZ-rSJjKBlngC~TLkrBtdzF2jmyBcKU8Kzr~NireJfx~ygtErlhwvQu6K1J83wXVTkPfD6F~oJdD4-yZIyMyYe0ZCW9t8N~Ot5wxC8PX~XQkYEU5QJWRO1VGdT3bIvqUWQhbyCwetQ-jEB~v~KPs6wHCFdqB5GCsaZLcMWA8Shyz7ru-TmHB0KWfzjpZoMKNKYux4rglrQWJLPGzTqmSPg" alt="">
+    <img class="graf1" src="https://s3-alpha-sig.figma.com/img/39e1/923f/13d450236ee55a682dd1e900494e741e?Expires=1710720000&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4&Signature=pdso7wTZcuTAG7sRXxsIwG6ONL-MtZTJeN7vyuccImeISI5ETbtoW9CtGLdM2P-SJ6KjK3tkOToCSfxwZQ~XJhOcCrPyRK-Ljq~ymfT2uPLIW0DyUWIqmNsbz~Wr3BhGxIHaCb016dFQr1wAmKBt3QVuRc3MTBZaRD0QUY1hf8bkfGmXruJbWuiPT81ca8E8RdtQHVWXZKuYhM8Peh8NFn1jkdAddQMvftUQHfiW-IdHE3Q2chetpy9CUjs~PJ2RdNPLWRJdAbTBTM8alLG-hpzkeW2SIgZ8EfY2Kfs3mOYLW-VLIcZi82QIS2-~5T9Sf9pTXOGlAZHBmD8-XHdCSQ__" alt="">
     </div>
     <div class="site">
         <p class="text4">
@@ -198,7 +198,7 @@
             <button class="get_started">Get Started Free</button>
         </div>
 
-        <img class="graf2" src="https://s3-alpha-sig.figma.com/img/3fbc/cd63/b8369233f6baeef2e44a0d2cad0e9048?Expires=1709510400&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4&Signature=mfNuse4ZTY2Jg0sbZcR7Q43yOyFhCiOHh~TZinS-KmH9uddt6OPbz0z4raIX-4jJJZs4bdxfSTBBDR99NWH1IPS7rMmvIJWqYqmAS0KACq98LUbUIS341w40h~0j1jlx~eNm88eXIL0Xd~EDeemk50qGlZoFdahF5sTUAVoJdjY87bEWVaHFuNX1s00TqTV21K8KRxDoMeF4JSwJfKd2sbp7l5DxT2RYWVGOVsNuwskqR30krHrUzhda5qBO~759zQu0dyviJrAYxLv4wdSjZ93ywZ~e1Qu8YA~YO1atb39gVXU4iFbTBN8VsBzBwptzecg~YsXXl-yD6B9Xpj7qfQ__" alt="">
+        <img class="graf2" src="https://s3-alpha-sig.figma.com/img/3fbc/cd63/b8369233f6baeef2e44a0d2cad0e9048?Expires=1710720000&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4&Signature=LGSyt3vH13lXx9xedou6cjmElzK7jUed4We2vLgQEvMjza5G9pT6KuEL7xyK1YDtGNPSxbc9Wvj42JQSXyfrNJe743uWdCnw4m7CrfUw8W56sH04PMBoM-ZPT4aIPlbggozP0aW-BMUoiHDebEcfez62-B8jsTD2WL0ozgU2WsxbSLoam~WUv2nqPczf24eOhrPza-3r~Y-YUcY9PcJ0usiKdfMIrA~NeIJu6pJhjb7gFdeoLut8D4Oer2lAB-IKo319sl8vRTI6iUytbOXxVJA0Br5eSeZBYpCLJSTERibe7MpGOMXe0vuzCSPKRxu8wPJlIykS6hoNY4Vpple7tA__" alt="">
     </div>
 
 
