--- a/Figma-file/figma.html
+++ b/Figma-file/figma.html
@@ -75,7 +75,7 @@
         </div>
         </div>
     <div>
-    <img class="graf1" src="https://s3-alpha-sig.figma.com/img/39e1/923f/13d450236ee55a682dd1e900494e741e?Expires=1710720000&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4&Signature=pdso7wTZcuTAG7sRXxsIwG6ONL-MtZTJeN7vyuccImeISI5ETbtoW9CtGLdM2P-SJ6KjK3tkOToCSfxwZQ~XJhOcCrPyRK-Ljq~ymfT2uPLIW0DyUWIqmNsbz~Wr3BhGxIHaCb016dFQr1wAmKBt3QVuRc3MTBZaRD0QUY1hf8bkfGmXruJbWuiPT81ca8E8RdtQHVWXZKuYhM8Peh8NFn1jkdAddQMvftUQHfiW-IdHE3Q2chetpy9CUjs~PJ2RdNPLWRJdAbTBTM8alLG-hpzkeW2SIgZ8EfY2Kfs3mOYLW-VLIcZi82QIS2-~5T9Sf9pTXOGlAZHBmD8-XHdCSQ__" alt="">
+    <img class="graf1" src="https://s3-alpha-sig.figma.com/img/39e1/923f/13d450236ee55a682dd1e900494e741e?Expires=1711929600&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4&Signature=pwlWgMz30qvNVinuk9q-VfU33GJrMIdmZXkatDpqi6FfG-CkGUQrMCNfLS21RlZExxaMFI0rmj0kH8YzBTfu585UfYG~6sHOQWi8P8gx~TxMkuBRuViZfGab6CnRlJWPunioM11OSQxd9xmG3BOU3Pszfrlk28BCzHqp4jPzaC3T4BS68RWbzk1SqH8~Ro4UckU6dqW8PF9Yr8A7kSQiOLH2jQA4UteSQ7dgm5GZMosfr6USNSTGaf8mAfvA9GSa00jmQ6xyV-vstxg75vxcDLkpmGqCPnm9D5fZ0SDq1Khk9gS4uB7u1BDwze6V~6Y8mytrQInf0lYf5cviRp4SNw__" alt="">
     </div>
     <div class="site">
         <p class="text4">
@@ -91,7 +91,7 @@
     </div>
 
     <div class="timeline_team">
-        <img class="timeline" src="https://s3-alpha-sig.figma.com/img/ca5c/aada/80126068bebb4911e75914bab340810f?Expires=1710115200&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4&Signature=eBZ9oB3Zxa7klx9bB5V6S-Vd~1JU5I7wSavXgO449zKj8mxBGeHjigCANSX26Mh8xLgopHcBjldKDlJAX~ehozOuJbaWVzAVVoS5UeebFc~~U4i7gS05vmd22yy1qXgneFtY7EsNn7y0v8skTvn0HTkFYHdEAbLCtnd0JjNkFGc8UOhwj2xysYZTBsTK6qXCXpzpAIW-S2XerdqAvhHDX6NblZ7ApNK~kSb6bwS2OYw6-~nWf3I3uhAlq-SQEA3-JAXqOEstkEM4pJyk40kezj6eU-rOY-28lfnpCCob~PTAEvNsUtFtVU0u--pNlttbXPRUIv3pr9GFj2Nf697SMQ__" alt="">
+        <img class="timeline" src="https://s3-alpha-sig.figma.com/img/ca5c/aada/80126068bebb4911e75914bab340810f?Expires=1711929600&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4&Signature=acivH1B2~S9H-QXAvNVGGCvsWLVpFNiZfm~hozsYjGUVitq1ZIAtNvIJp5q1YEZZtpg6wvMoO6YHmhw~~A1YkWoI~3E9aVM1u5QH7vw0qjSOjSpoomghLxjIdZf8BcSj88pJyy-yUu7Rw8f1zdNcqGKOALAoHE6tG3L~OXt2EpRsAkjtXAJPkEqpdCxiIHZF5EgQXsLXzjxMmHQX3-ERETDfaZ0ZTMqQxghqrukJ9Hu0Uh5D2up0oZG3DwaOU3CDak4tDyepUhiHxIRYLUfxTcl-k46Z2VY35NJYAJk1MbyZNeWvrwTrlGL~uPLfsHNNDOJMHPBQ55H~xEGuFNx2uw__" alt="">
         <div class="text_ariya">
             <div class="texes">
                 <div class="survey">
@@ -198,7 +198,8 @@
             <button class="get_started">Get Started Free</button>
         </div>
 
-        <img class="graf2" src="https://s3-alpha-sig.figma.com/img/3fbc/cd63/b8369233f6baeef2e44a0d2cad0e9048?Expires=1710720000&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4&Signature=LGSyt3vH13lXx9xedou6cjmElzK7jUed4We2vLgQEvMjza5G9pT6KuEL7xyK1YDtGNPSxbc9Wvj42JQSXyfrNJe743uWdCnw4m7CrfUw8W56sH04PMBoM-ZPT4aIPlbggozP0aW-BMUoiHDebEcfez62-B8jsTD2WL0ozgU2WsxbSLoam~WUv2nqPczf24eOhrPza-3r~Y-YUcY9PcJ0usiKdfMIrA~NeIJu6pJhjb7gFdeoLut8D4Oer2lAB-IKo319sl8vRTI6iUytbOXxVJA0Br5eSeZBYpCLJSTERibe7MpGOMXe0vuzCSPKRxu8wPJlIykS6hoNY4Vpple7tA__" alt="">
+        <img class="graf2" src="https://s3-alpha-sig.figma.com/img/3fbc/cd63/b8369233f6baeef2e44a0d2cad0e9048?Expires=1711929600&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4&Signature=malZJz4FtzgiqPxqxNPJmYnDSlc5HjB-4cA2evWQj3diFzCQkqK1C9F3AyLxPAOGv3v9S63P2BVqZWaisIi3Q6Si~zafCSkfXxWhRSk6TSKt4s6oUJNTUEUcjxJpznPWj4KjXhJ6TKrSRZxjalEqa-zYH83SJ1c~GgKPWMK97dxFiTIyUr1DB3zTeim~MwlI6mpgQKyhNWvf5sUFEVUOxHubp2aIMGJNw3sdO0ccEj7PqLvBEvVU0tSdijZSY76GAJV5BEDIUE5sBph~TVtnj2~qxWXSsiR31tZGvipJMM1G3p8vsHqhLcUwc5Vvc1862ZRg~0eS62j4-fhGX3g5rw__" alt="">
+
     </div>
 
 
