--- a/Figma-file/figma.html
+++ b/Figma-file/figma.html
@@ -9,42 +9,25 @@
 </head>
 <body>
     <div class="main_contain">
+
         <div class="header">
-            <ul class="ul1">
-
-                <li id="teamflo" class="li1"><a class="team1" href="#team.flow">team.flow</a></li> &nbsp; &nbsp; &nbsp; &nbsp;
-
-                <select class="howit">
-                    <option value="How it Works">How it Works</option>
-                </select>
-
-                <select class="produc">
-                    <option value="Product">Prodict</option>
-                </select>
-
-                <li id="pricing" class="li1"><a href="#Pricing">Pricing</a></li class="li1">
-
-                <select class="resor">
-                    <option value="Resorces">Resources</option>
-                </select>
-                &nbsp; &nbsp;
-
-                <li id="login" class="li1"><a href="#Login">Log in</a></li>
-
-                <li id="get_started" class="li1"><a href="#Get started free">Get started free</a></li>
-
-                <select class="menu" name="Menu" id="option">
-                    <option value="">Menu</option>
-                    <option value="">home</option>
-                    <option value="">about</option>
-                    <option value="">contact</option>
-                    <option value="">help</option>
-                    <option value="">store</option>
-                </select>
-            </ul>
+            <div class="logo">team.flow</div>
+            <div class="wrapper">
+                <nav>
+                    <a href="#Home">Home</a>
+                    <a href="#Service">Service</a>
+                    <a href="#Blogs">Blogs</a>
+                    <a href="#About">About</a>
+                    <a href="#Contact">Contact</a>
+                </nav>
+                <div class="btns">
+                    <div class="login-btn">Login</div>
+                    <div class="sign-up">Sign-up</div>
+                </div>
+            </div>
+                <i class="fa fa-bars"></i>
         </div>
 
-        
         <div class="save_valu">
         <button class="save">Save 90%</button>
         <select class="account" name="account" id="option">
