--- a/Figma-file/figma.html
+++ b/Figma-file/figma.html
@@ -57,7 +57,7 @@
         </div>
         </div>
     <div>
-    <img class="graf1" src="https://s3-alpha-sig.figma.com/img/39e1/923f/13d450236ee55a682dd1e900494e741e?Expires=1711929600&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4&Signature=pwlWgMz30qvNVinuk9q-VfU33GJrMIdmZXkatDpqi6FfG-CkGUQrMCNfLS21RlZExxaMFI0rmj0kH8YzBTfu585UfYG~6sHOQWi8P8gx~TxMkuBRuViZfGab6CnRlJWPunioM11OSQxd9xmG3BOU3Pszfrlk28BCzHqp4jPzaC3T4BS68RWbzk1SqH8~Ro4UckU6dqW8PF9Yr8A7kSQiOLH2jQA4UteSQ7dgm5GZMosfr6USNSTGaf8mAfvA9GSa00jmQ6xyV-vstxg75vxcDLkpmGqCPnm9D5fZ0SDq1Khk9gS4uB7u1BDwze6V~6Y8mytrQInf0lYf5cviRp4SNw__" alt="">
+    <img class="graf1" src="https://s3-alpha-sig.figma.com/img/39e1/923f/13d450236ee55a682dd1e900494e741e?Expires=1716163200&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4&Signature=L~x-3E9cCMVFFwmC5v~XDaiMSwxxtIlMIAJzBpjtbno9OnBj59WR7r3BJWAakyFfQz6NmpgV-4iqAMD4A7O34BZgKl96DPxJ9eKyMvyDIMEHXJNPSxhESXTRvzXSvAS5cmrpa~mpqF7W8v3GSGszOvo4T7fVFymLcB3Ics9DIcrdOdxT~WEOTbq9mOAoKYfti9Yi~N7j0hY5uEImUaHNOY4G4fPwXSdKS3TiBvM0b79tDx99E1TDsLsqsTl7AyaF3xS3HsDZUg8GFFXj0LxYfrvHFdzy4eg1~r7Lukrig-trgAIRQFOj23gtQnnflrsl98TPfRt2o7lpFv0WauNGRw__" alt="">
     </div>
     <div class="site">
         <p class="text4">
@@ -73,7 +73,7 @@
     </div>
 
     <div class="timeline_team">
-        <img class="timeline" src="https://s3-alpha-sig.figma.com/img/ca5c/aada/80126068bebb4911e75914bab340810f?Expires=1711929600&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4&Signature=acivH1B2~S9H-QXAvNVGGCvsWLVpFNiZfm~hozsYjGUVitq1ZIAtNvIJp5q1YEZZtpg6wvMoO6YHmhw~~A1YkWoI~3E9aVM1u5QH7vw0qjSOjSpoomghLxjIdZf8BcSj88pJyy-yUu7Rw8f1zdNcqGKOALAoHE6tG3L~OXt2EpRsAkjtXAJPkEqpdCxiIHZF5EgQXsLXzjxMmHQX3-ERETDfaZ0ZTMqQxghqrukJ9Hu0Uh5D2up0oZG3DwaOU3CDak4tDyepUhiHxIRYLUfxTcl-k46Z2VY35NJYAJk1MbyZNeWvrwTrlGL~uPLfsHNNDOJMHPBQ55H~xEGuFNx2uw__" alt="">
+        <img class="timeline" src="https://s3-alpha-sig.figma.com/img/ca5c/aada/80126068bebb4911e75914bab340810f?Expires=1716163200&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4&Signature=YIhLOqfF7W4ObckILleDwztgQ6EFuGXv6TeliXxN2VbiTCubP6fKaj8GbsHGnWcrs6DRURs2TfX5e8XMJQy2R-Zqryo1q1NeTsHpc3ukiKjr3-TWqwXpGbkDJtDFn0ztjrB99diufWE4iSLxB1tJH1GKhs933F0c0sScEQ-NAYgCRX8Yzxn5T3t8mhfFSJBqS4TK4bKVvd-qDsFTmrRLpczZQRxuNqlrGYqkph-dTaHFjxwyaydftGkbvgaSdCg84d9W6RdEvOdumFFc1q2S9nhsW6WMTrEtzj0yfn9~I1EwNlA3G555dmbQ8quSWAQUWvv0hkQcWlRk9~BNmKwVRA__" alt="">
         <div class="text_ariya">
             <div class="texes">
                 <div class="survey">
@@ -180,7 +180,7 @@
             <button class="get_started">Get Started Free</button>
         </div>
 
-        <img class="graf2" src="https://s3-alpha-sig.figma.com/img/3fbc/cd63/b8369233f6baeef2e44a0d2cad0e9048?Expires=1711929600&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4&Signature=malZJz4FtzgiqPxqxNPJmYnDSlc5HjB-4cA2evWQj3diFzCQkqK1C9F3AyLxPAOGv3v9S63P2BVqZWaisIi3Q6Si~zafCSkfXxWhRSk6TSKt4s6oUJNTUEUcjxJpznPWj4KjXhJ6TKrSRZxjalEqa-zYH83SJ1c~GgKPWMK97dxFiTIyUr1DB3zTeim~MwlI6mpgQKyhNWvf5sUFEVUOxHubp2aIMGJNw3sdO0ccEj7PqLvBEvVU0tSdijZSY76GAJV5BEDIUE5sBph~TVtnj2~qxWXSsiR31tZGvipJMM1G3p8vsHqhLcUwc5Vvc1862ZRg~0eS62j4-fhGX3g5rw__" alt="">
+        <img class="graf2" src="https://s3-alpha-sig.figma.com/img/3fbc/cd63/b8369233f6baeef2e44a0d2cad0e9048?Expires=1716163200&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4&Signature=o0SfQoEnh7hbjPy4nnsZ42-FSqrllR65mKi1B9EDZf1GktDLSMTlEOK0qm57qHpavO9xUiHQ4W3gSyV~VuQsSxP2MmXTWio~KO3CnVxfNTH2JkX0iaZuzOP689oNVMNRFQYwCIx-6s3cAw9NBvRCxWru3BWyLpxUG6iAYsX2IsUZUjGe8kmXKKm3uukI6D23Ct1MxG95zETBG0vCwiFXVkBiyrBg6SNpZKO-S0F7s2gypwga-W0N7-Y733ylXcO-tokpkdtyEJmBBEHc3SftGOL0iWf~MG-SAQvk-D7VYk2hdLnrXh4NJRjvuKQfDOaXbUyr5EdFTt6QacUjn9~bSA__" alt="">
 
     </div>
 
